gccida/c3/get_arg_pointer_save_area
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_arg_pointer_save_area/src/function.c:7606:51: error: use of undeclared identifier 'machine_mode'
x_arg_pointer_save_area = assign_stack_local_1( ( machine_mode)v3, mode_size[v3], 0, f); 
                                                  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_arg_pointer_save_area/src/obj/function.o] Error 1
